lab1/Test/L1-A-12-45.output
Error Type B at Line 8
Error Type B at Line 17
Error Type A at Line 19
Error Type B at Line 22
Error Type A at Line 30
Error Type B at Line 30
Error Type B at Line 36
