lab1/Test/L1-A-12-45.cmm
struct K7jzSy6syN CbRNgZVe1VBkbn_kjMuE 
;
struct {
  int qUEnA8f2piwDlk0AoU ;
  struct Ej4AkeCfHc {
    int mojlc4wOW0wGtdofk ;
  }G8ND0VM , SZJY9XbxuJbuZVr95wK = oNaAsgMHle9 = QbXGB 
    || && N920 < hQRgZ_cNAJ - xPqRSzC * - - slR [ On3caPXsn5gncWwV8T 
    > CAW6j3mnMffQOj5YIo ( B || tigBe9xvpdHgZ == ! ( X 
    || u66GbvuYnoJrDRjr8 && Llmz1Cynr >= ( luPrV9 ( fEwrn 
    , GDt9LjHKqtdaXSobk ) ) != iKg - xRMXASTtao8aoAsn 
    <= 2083359794.1745391342 ) + ! 582880386 . HvCagLnh 
    ) ] / ! Hf ( ) ;
}D7CQKet54SofqGBxjuA2 ( float llLuvgN5fWYoVjcHLf ) 
  {
  int NX3wjrPkJXLzTRyN [ 1596452717 ] 
}
int ;
int T ( %) {
}
int raYL31D ( ) {
  ;
  gWWAVqebMTAIUsjH ;
  if ( UwwJzIIAqey1kRjCs )   vI7i3eOOQQE ;
else   if ( R6fH4sKwIYThXW4hW )   EysBVE ;


  eeiHHfgkDzCyMf ;
  if ( A9SA6yzn7vvKWjCju ) {
    while ( u \)   }
  if ( Wt )   drg0o_M1uLB0ZbBk ;

}else return kLrdQR ;

}
int VbazP07SdGMbu1at ( int , int ekh2SVY8Mv8yTGax 
  ) {
}
int ;
int MOkz_shJY , USrPLQhEoCnefif4hTP 

;
